[package]
name = "ascii-print"
version = "0.1.0"
authors = ["Marek Barvíř barvirm@gmail.com"]
description = "Command line utility for displaying ASCII table"
edition = "2018"
repository = "https://github.com/barvirm/ascii-table"
license = "MIT"
keywords = ["cli", "utility", "binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ascii-table"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.3"
term_size = "0.3.2"
